Fix dropdown menus z-index overlaps

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
@@ -111,7 +111,7 @@ svg {
 
 // Dropdown menus
 
-.btn-widget-add-below {
+.btn-dropdown {
     ::-webkit-scrollbar {
         width: 4px;
         background-color: #EAEAEA;
@@ -129,29 +129,36 @@ svg {
     }
 }
 
-.btn-widget-add-below-wrapper {
+.btn-dropdown-wrapper {
     &:hover {
-        > .btn-widget-add-below {
+        > .btn-dropdown {
             border-width: 5px;
             opacity: 1;
         }
     }     
 }
-.btn-widget-add-below {
-    opacity: 0.7;
+.btn-dropdown {
+    position: relative;
+    z-index: 1000;
+    opacity: 0.8;
     transition: 0.3s opacity;
     > .btn-group {        
         margin: 0 auto;
         bottom: 17px;
     }
 }
-[dir="ltr"] .btn-widget-add-below {
+
+.btn-dropdown.show {
+    z-index: 1001;
+}
+
+[dir="ltr"] .btn-dropdown {
     >  .btn-group {
         left: calc(-14px + 50%);
     }
 }
 
-[dir="rtl"] .btn-widget-add-below {
+[dir="rtl"] .btn-dropdown {
     >  .btn-group {
         right: calc(-14px + 50%);
     }
